feat: desktop background and icon grid

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz.exe</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📝</text></svg>">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="desktop">
+    <div class="desktop-icons">
+      <div class="icon" tabindex="0"><div class="icon-img">🖥️</div><div class="icon-label">My Computer</div></div>
+      <div class="icon" tabindex="0"><div class="icon-img">🗑️</div><div class="icon-label">Recycle Bin</div></div>
+      <div class="icon" tabindex="0"><div class="icon-img">📁</div><div class="icon-label">My Documents</div></div>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
