feat: application window with win95 chrome

--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
       <div class="icon" tabindex="0"><div class="icon-img">🗑️</div><div class="icon-label">Recycle Bin</div></div>
       <div class="icon" tabindex="0"><div class="icon-img">📁</div><div class="icon-label">My Documents</div></div>
     </div>
+
+    <div class="window" id="quiz-window">
+      <div class="title-bar" id="title-bar">
+        <div class="title-bar-text">📝&nbsp; Quiz.exe</div>
+        <div class="title-bar-controls">
+          <button class="title-btn minimize-btn" aria-label="Minimize">_</button>
+          <button class="title-btn maximize-btn" aria-label="Maximize">□</button>
+          <button class="title-btn close-btn" aria-label="Close">✕</button>
+        </div>
+      </div>
+      <div class="menu-bar">
+        <span class="menu-item">File</span>
+        <span class="menu-item">Edit</span>
+        <span class="menu-item">View</span>
+        <span class="menu-item">Help</span>
+      </div>
+      <div class="window-body">
+        <!-- screens go here -->
+      </div>
+      <div class="status-bar">
+        <div class="status-panel" id="status-text">Ready</div>
+        <div class="status-panel">Quiz.exe</div>
+        <div class="status-panel status-clock" id="win-clock">12:00 PM</div>
+      </div>
+    </div>
+
   </div>
   <script src="script.js"></script>
 </body>
