--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
       </div>
     </div>
 
+    <div class="taskbar">
+      <button class="taskbar-start" id="taskbar-start">
+        <span class="start-logo">⊞</span>
+        <strong>Start</strong>
+      </button>
+      <div class="taskbar-sep"></div>
+      <div class="taskbar-tasks">
+        <div class="taskbar-task is-active">📝&nbsp; Quiz.exe</div>
+      </div>
+      <div class="taskbar-tray">
+        <span id="taskbar-clock">12:00 PM</span>
+      </div>
+    </div>
+
   </div>
   <script src="script.js"></script>
 </body>
